# CMakeSharedLib

./: .gitignore  Dockerfile  README.md
HeroesClient/: CMakeLists.txt
HeroesClient/src/: main.cpp
HeroesLibrary/: CMakeLists.txt
HeroesLibrary/include/: Batman.h  Heroe.h
HeroesLibrary/src/: Batman.cpp  Heroe.cpp  Superman.cpp
PrimeClient/: CMakeLists.txt
PrimeClient/src/: main.cpp
PrimeLibrary/: CMakeLists.txt
PrimeLibrary/include/: primeutil.h
PrimeLibrary/src/: primeutil.cpp
include/: prime.h
src/: primeutil.cpp
